# vcalo

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  api_reference.html  configuration.html  contributors.html  decay.mac  default.yaml  genindex.html  index.html  installation.html  introduction.html  search.html  searchindex.js  setup.sh  usage.html  vana.cc  vcalo.cc
.doctrees/: api_reference.doctree  configuration.doctree  contributors.doctree  environment.pickle  index.doctree  installation.doctree  introduction.doctree  usage.doctree
.github/workflows/: docs.yml
Data/conv_ecal/: VPlot.py  conve_extract.cxx  default.yaml  draw.cxx  ecale_combine.cxx
Data/data/: VPlot.py  default.yaml  draw.cxx
Data/data1/: VPlot.py  default.yaml  draw.cxx
Data/data_T10_20_100MeV/: VPlot.py  extract_peaks.cxx
Data/data_T10_20_1GeV/: VPlot.py
Data/data_T10_20_1GeV_logx/: VPlot.py
Data/data_T5_50_100MeV/: VPlot.py
Data/data_T_E_R/: VPlot.py
Data/ecal_only/: VPlot.py  default.yaml  ecale_combine.cxx
_sources/: introduction.rst.txt
condor/: condor.sh
condor/T_R_data/: VPlot.py  process.cxx
condor/temp/: default.yaml  draw.cxx  err.txt  log.txt  run.condor  run.sh
config/: default.yaml  draw.cxx  parN_log.onnx  tracker.gdml
docs/: .buildinfo  api_reference.html  configuration.html  contributors.html  genindex.html  index.html  installation.html  introduction.html  objects.inv  search.html  usage.html
docs/.doctrees/: configuration.doctree  environment.pickle  usage.doctree
docs/_sources/: api_reference.rst.txt  contributors.rst.txt  index.rst.txt
docs/html/: .buildinfo  configuration.html  contributors.html  genindex.html  index.html  introduction.html  search.html  searchindex.js
docs/html/.doctrees/: contributors.doctree  environment.pickle  index.doctree  installation.doctree  introduction.doctree
docs/html/_sources/: usage.rst.txt
docs/source/: conf.py  configuration.rst
html/: installation.html
html/.doctrees/: api_reference.doctree
html/_sources/: installation.rst.txt
include/: AlgorithmContext.hh  AmbiguityResolutionAlgorithm.hh  Cluster.hh  Cluster.hpp  Config.hh  CylindricalTrackingGeometry.hh  DataHandle.hh  DefaultHoughFunctions.hh  DetectorConstruction.hh  DetectorElementStub.hh  DetectorInclude.hh  EventAction.hh  GeometryContainers.hh  GroupBy.hh  HistoManager.hh  HoughTransformSeeder.hh  IAlgorithm.hh  Index.hh  IndexSourceLink.hh  MagneticField.hh  Measurement.hh  MeasurementCalibration.hh  MeasurementCreation.hh  MeasurementToSpacepoints.hh  PrimaryGeneratorAction.hh  ProcessCode.hh  ProtoTrack.hh  Range.hh  RunAction.hh  ScalableBField.hh  SequenceElement.hh  Sequencer.hh  SimHit.hh  SimSeed.hh  SimSpacePoint.hh  SpacePointMaker.hh  SteppingAction.hh  TelescopeDetectorElement.hh  Track.hh  TrackFinder.hh  (+4 more)
include/Analysis/: AlgoBase.hh  ConvBaseline.hh  ECALBaseline.hh  ParticleNet.hh  TrackerBaseline.hh  TruthBaseline.hh  VAnaManager.hh  global.hh
include/Analysis/KDTree/: KNNCalculator.hh  ORTCalculator.hh  PointCloud.hh
include/HoughSeeding/: HoughSeeding.hh  HoughVector.hh  VAnaManager.hh
include/Simulation/: Config.hh  ConstructTracker.hh  DetectorConstruction.hh  HistoManager.hh  PointCloud.hh  PrimaryGeneratorAction.hh  SteppingAction.hh  TrackingAction.hh  constants.hh
include/visual/: TrackingGeometryView3DBase.hh
run/: Crystal.json  ECALShield.json  default.yaml  draw.cxx  gen  hist.root  log  optical.root  plot.py  save.cxx  test.condor  test.root  test.sh  test_shield.root  vcalo.gdml  vcalo.json
run/ETest/: default.yaml  run.condor
run/OOC/: gen
run/OOC/ana/: ana.cxx  cutflow.cxx
run/OOC/temp/: default.yaml
run/OOC/test_fit/: draw.cxx  flux.csv  read.cxx  test.cxx
run/ReceivingCapability/: gen
run/ReceivingCapability/result/: draw.cxx
run/ReceivingCapability/temp/: default.yaml  run.condor
run/crystal_test/: default.yaml  draw.cxx
run/cutoff/: gen
run/cutoff/east/: default.yaml  run.sh
run/cutoff/result/: README.md
run/cutoff/temp/: default.yaml  run.condor
run/cutoff/west/: default.yaml  run.sh
run/document/: gen
run/document/ana/: VPlot.py  draw.cxx  list.txt
run/document/temp/: default.yaml
run/optical/: Conv.cxx  FFTtest.C
run/optical/apd-distance/: gen
run/optical/apd-distance/temp/: default.yaml  run.condor  run.sh
run/plot_test/: plot.py
run/result/: ana.cxx  draw.cxx  plot.py  tracking.cxx
run/result_ecal/: ana.cxx  plot.py
run/temp/: default.yaml  run.condor
run/track/: simple_alice.json
scripts/ML/: prepare_dataset_GNN.py
src/: AmbiguityResolutionAlgorithm.cc  Channelizer.cc  Config.cc  ConstructConverter.cc  ConstructECAL.cc  ConstructTracker.cc  DetectorConstruction.cc  DigitizationError.cc  EventAction.cc  HistoManager.cc  HoughTransformSeeder.cc  IAlgorithm.cc  MagneticField.cc  Measurement.cc  MeasurementCalibration.cc  MeasurementCreation.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  Run.cc  Sequencer.cc  SpacePointMaker.cc  SteppingAction.cc  TelescopeDetectorElement.cc  TrackFinder.cc  TrackFindingAlgorithm.cc  TrackFindingAlgorithmFunction.cc  TrackingAction.cc  VAnaManager.cc  WhiteBoard.cc
src/Analysis/KDTree/: ORTCalculator.cc
src/HoughSeeding/: HoughSeeding.cc  VAnaManager.cc
src/Simulation/: Config.cc  ConstructACD.cc  ConstructConverter.cc  ConstructECAL.cc  DetectorConstruction.cc  EventAction.cc  HistoManager.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  TrackingAction.cc  constants.cc
